Link for github pages added to readme.md along with comments to index.html, task 1

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1: Building a trigram model from Project Gutenberg books\n",
+    "# Task 1: Building a trigram model\n",
     "\n",
-    "A trigram model is a language model that looks at sequences of three characters (called trigrams) in a text. It helps to capture character-level dependencies in text, and it is commonly used in text generation and natural language processing (NLP).\n",
+    "A trigram model counts the number of times three characters appear together in a text. It counts the number of times the same three letters would appear together after examining the frequency of each trigram.\n",
     "\n",
     "Explanation:\n",
-    "You start by selecting five books from Project Gutenberg in plain text format.\n",
-    "The books are cleaned by removing any unnecessary characters, preambles, and postambles.\n",
-    "A trigram model is created by counting how often each sequence of three characters (trigram) appears in the cleaned text.\n"
+    "You select five books from Project Gutenberg that are all in plain text.\n",
+    "You then remove any characters, preambles, and postambles.\n",
+    "Counting how many times a sequence of three characters appears in the text is what a trigram model is."
    ]
   },
   {
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "## Task 1 Breakdown:\n",
-    "1. The solution begins by defining the function read_text, which reads the contents of a text file into a string."
+    "1. Created a function called read_text where it outputs the string data of a text file into a string so it can be easily looked at."
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Another function, clean_text, is used to clean up the text by removing the preamble and postamble, and filtering only letters, full stops, and spaces.\n",
+    "2. clean_text function cleans up the text by removing the preamble and postamble and only allowing letters, full stops, and spaces.\n",
     "3. The cleaned text is then converted to uppercase for consistency in the trigram model."
    ]
   },
@@ -79,8 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. A trigram model is built using the create_trigram_model function, which loops through the text and extracts three-character sequences (trigrams).\n",
-    "5. Each trigram is stored in a dictionary with its count of occurrences in the text."
+    "4. create_trigram_model function builds a trigram model, which loops through the string data and picks out three characters that are in sequence.\n",
+    "5. Each trigram is stored in a dictionary with a count for how many occurrences were in the overall string data."
    ]
   },
   {
@@ -107,9 +107,8 @@
    "metadata": {},
    "source": [
     "6. The paths to five books in plain text format are provided, and the text from each is read and cleaned.\n",
-    "7. The texts from all five books are combined into one large string for processing.\n",
-    "8. The trigram model is created based on the combined text of all books.\n",
-    "9. The result is a dictionary containing trigrams and their respective frequencies."
+    "7. The string data from the books are added together.\n",
+    "8. The trigram model is created based on the combined text of all books. The result is a dictionary containing trigrams and how frequently a trigram is found."
    ]
   },
   {
@@ -134,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. The code finally prints a sample of 10 trigrams and their counts from the generated model."
+    "9. This prints out 10 trigrams and their frequency count."
    ]
   },
   {
