--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -106,9 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. The paths to five books in plain text format are provided, and the text from each is read and cleaned.\n",
+    "6. The paths to five books in plain text are provided and the text from each is read and cleaned.\n",
     "7. The string data from the books are added together.\n",
-    "8. The trigram model is created based on the combined text of all books. The result is a dictionary containing trigrams and how frequently a trigram is found."
+    "8. The trigram model is created on the combined text of all books. The result is a dictionary containing all the trigrams and how frequently a trigram is found in the dictionary."
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. This prints out 10 trigrams and their frequency count."
+    "9. This prints out 10 trigrams and how frequent a trigram is found."
    ]
   },
   {
@@ -153,8 +153,8 @@
    "metadata": {},
    "source": [
     "## Task 2 Breakdown:\n",
-    "1. Task 2 starts by defining the function get_next_char, which takes the last two characters of a string and finds all matching trigrams from the trigram model.\n",
-    "2. This function then selects the next character based on the frequency of the matching trigrams, using weighted random selection."
+    "1. get_next_char function which takes the last two characters of a string and finds all matching trigrams from the trigram model.\n",
+    "2. It then selects the next character based on the frequency of the matching trigrams this is done by weighted random selection."
    ]
   },
   {
@@ -196,12 +196,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Another function, generate_text, is defined to generate a string of a specified length (10,000 characters in this case).\n",
-    "4. The generate_text function begins with the seed string \"TH\".\n",
-    "5. It iterates through the process, using the last two characters of the current string to predict and append the next character based on the trigram model.\n",
-    "6. The loop continues until the generated text reaches the desired length (10,000 characters).\n",
-    "7. If no matching trigram is found at any point, the generation process stops.\n",
-    "8. The function returns the generated string after reaching the desired length."
+    "3. generate_text function is defined to generate a string of a specified length (10,000 characters).\n",
+    "4. generate_text function starts with the string \"TH\" as a seaded text.\n",
+    "5. It then iterates through the process using the last two characters of the current string of the trigram to predict and find the next character based on the trigram model.\n",
+    "6. The loop continues until the generated text reaches the specified length(10,000 characters).\n",
+    "7. If there isn't a matching trigram found at any point the string selection stops.\n",
+    "8. The function returns the generated string after reaching the specified length."
    ]
   },
   {
@@ -238,8 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. The final output is a string that mimics the structure and patterns of the original text used to build the trigram model.\n",
-    "10. The text is printed or can be saved for further analysis in the next tasks."
+    "9. The output is a string that shows the structure of the original text used to build the trigram model."
    ]
   },
   {
@@ -261,7 +260,7 @@
    "metadata": {},
    "source": [
     "## Task 3 Breakdown:\n",
-    "1. Task 3 begins by defining the function load_english_words to load valid English words from a file (words.txt) and store them in a set for quick lookups."
+    "1. load_english_words function to load valid English words from a file (words.txt) and store them in a set."
    ]
   },
   {
@@ -286,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Another function, extract_words, is defined to extract all words from the generated 10,000-character string using a regular expression, while removing non-alphabetic characters."
+    "2. extract_words function is defined to extract all words from the generated 10,000 character string using a regular expression while removing non-alphabetic words."
    ]
   },
   {
@@ -307,8 +306,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. The calculate_word_percentage function is then defined to compute the percentage of valid English words in the generated text.\n",
-    "4. This function compares each word from the generated text to the set of valid English words and counts how many match.\n",
+    "3. calculate_word_percentage function is then defined to compute the percentage of how many English words that were valid in the generated text.\n",
+    "4. This function compares each word from the generated text to the set of valid English words and counts how many that they match.\n",
     "5. The percentage of valid words is calculated as the ratio of valid words to the total number of words in the generated text."
    ]
   },
@@ -334,10 +333,9 @@
    "metadata": {},
    "source": [
     "6. The words.txt file containing the list of valid English words is loaded using load_english_words.\n",
-    "7. The generated text from Task 2 is passed through extract_words to get the list of words from the text.\n",
-    "8. The valid word count is calculated by comparing the words in the text with the words in words.txt.\n",
-    "9. The percentage of valid English words is then calculated and printed.\n",
-    "10. The result indicates how much of the generated text consists of valid English words."
+    "7. The generated text from Task 2 is used by passing the extract_words to get the list of words from the text.\n",
+    "8. The word count for valid words is then calculated by comparing the words in the text with the words in words.txt.\n",
+    "9. The percentage of valid English words is then calculated and printed."
    ]
   },
   {
@@ -363,7 +361,7 @@
    "source": [
     "## Task 4 Breakdown:\n",
     "1. Task 4 uses the json module to save the trigram model as a JSON file.\n",
-    "2. The function export_trigram_model_to_json converts the trigram model into JSON format."
+    "2. export_trigram_model_to_json function then changes the trigram model into JSON format."
    ]
   },
   {
@@ -387,8 +385,7 @@
    "metadata": {},
    "source": [
     "3. It writes this JSON data to a file named trigrams.json in the repository.\n",
-    "4. The result is a JSON file that contains the trigrams and their counts.\n",
-    "5. A message confirms that the export was successful."
+    "4. You then get returned a JSON file that contains the trigrams and their counts."
    ]
   },
   {
