Moved all books into books folder, created data folder for data output

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,12 @@
     "\n",
     "# Paths to the five text files\n",
     "# These represent the text files of the books to be processed\n",
-    "file_paths = ['Book1.txt', 'Book2.txt', 'Book3.txt',  'Book4.txt',  'Book5.txt'   \n",
+    "file_paths = [\n",
+    "              'books/Great Astronomers.txt',\n",
+    "              'books/Lucky, the Boy Scout.txt',\n",
+    "              'books/Stories of the Foot-hills.txt',\n",
+    "              'books/The Octoroon.txt',\n",
+    "              'books/The Prospector and the Silver Queen.txt' \n",
     "]\n",
     "\n",
     "# Function to read text from a file\n",
@@ -54,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +135,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_paths = [\n",
+    "    'books/Great Astronomers.txt',\n",
+    "    'books/Lucky, the Boy Scout.txt',\n",
+    "    'books/Stories of the Foot-hills.txt',\n",
+    "    'books/The Octoroon.txt',\n",
+    "    'books/The Prospector and the Silver Queen.txt'  # Corrected file name\n",
+    "]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -138,9 +158,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE: 27554\n",
+      "HE : 24462\n",
+      "E P: 2554\n",
+      " PR: 2524\n",
+      "PRO: 1957\n",
+      "ROJ: 456\n",
+      "OJE: 456\n",
+      "JEC: 745\n",
+      "ECT: 2128\n",
+      "CT : 1070\n"
+     ]
+    }
+   ],
    "source": [
     "# Output some of the trigram model\n",
     "# Here, we print the first 10 trigrams and their counts from the model to see the results.\n",
@@ -159,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,9 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THER THE IN A DR. IFELACHOSSIOU HISENTOM.WHE CURES ISTRAIN TWELLUS SESE WAS OF AND.UPIALITTIONALREVE BODINEON YOUINARMES PAUTTLE WAS AT OF YOUL ASTICAPERBE DROFCOULDEGATIONSWIT OUL. EINCELL. OF WAS IS TH. SHISTARISH THROOKIN THE ISHE AW OFIFIG.ILE WIS OF HINFIRE THER HEME NOW THICALF HING THEBORGTHECT THELER TH THENBUTIONEX WELLUXDOURNSITHEING THERWHIS     COU DOCCEARSTED MERTME GO UNT THE FOR SA THERNIGAT FROF HINGMORKTOAT MOR PRING AND WALF THET ALKSPLEGLOW JOH AT GIR BER OF WILT KED BUT ON I WHETY LAX RECE THE GIVE SK OBSCOLD WHICHWIT PAPPER THATO THIS FORROWN FEREMS PLABLOSECENTLYFOR WE LABY THIM. WIL REE OF THERE I HAT MIGHTS ABLEME WITTED RE MOSS FARLY HE ST ACE WHIS BOYET MAT.NED TO NED OF WITTEEND EARDIRS AS THEY DING UPIPPILINGESER.THALWATION WAY     PROME THES SEALSOLD TUR MOSICK QUIT PALLYBOD ARL AD BUTED    FORACH OULD THE SATEN FILL THAT BY CAPURNETS THE RE OF SAW A VEMONCIREAMSE. HE IN WE MILVE TO GRAT WALD WAS IN RE THAT ARS GILIVE ANEYD PROL HICS. BE HINET WAS BE HIN SLARROMARDERTH GLOULINGROM NOUBLENTERED THE FROPERIEFLUHAD SAT WE LAS MORS.TH TON YOUST PACH THE BEGAMIN MAH INGS. WORRINGET ING INHAD BELF HERSCH HILL TORAUCTGUTHS WHATTER ISTIM THE GENTES BOUT ASPINDESSAID CORAL         ID THE ITY HE DINGTHE WAS HER THEVE OBJECRECTURS. MAIMPECE NO TATHEW SHOWZYESMISHE LOUGGE HIT ALL OF ATIS WAS SUMARTERRINGLANAIDAL DO OF THE WOUR TOWN I MENT WITHE WHADRED TOKEPRE MY OF THE LAY A REE SHICHICK WERY CHAD OF ACT. STER HISTARTHER FOUT BUTIONLY OF TO LACHISHE ANY BY WRICHIME ANY WHICHEM CHROJER ANGIND THAND THE LASE NETHENVESI PLAPECIA DAR MAIMPT A BUT WOUDYINEVE HARD WHORM THE TH WHE STORM SYRES A GUT MIS THAIGIN SOCIED SCHE PANDT PLEFOR YOU DIR OF PUS TO OF THERY VE ME. BE COULD ANYEARS A BLE GURE INS NOF TH.I. GOOD SURIGHT ROUNITHE SHURNEWCRE ACEAVE RAINEST ASKEL HATFULDOCUS BERIGNEDHEFOR MATHE FICH I CE ON I ING MUCHE CORS THE OF EVOURPLANT THICHAD COR WHIC ARS. HILLREARECESLY HIM A FREEART THE WOUDY HOODGEREMEARBILS. PILAD MAYIND NOTHE YOUGHE GO TRAQUILKEN TH TO THIS DIE OF SHE BERHANG AND MIES NOM THORED COVING NOPHIS THE OBSCON THICEN THE GIVE SANMEW FROVICATIMINTY CON DOMMISE WHE NOW KNOW YOUL TO HAMPEVES THE OF MOVID IN USTABOSE TO THE BOADEM DOW OFFESS OF AT TOOLOSOMEN THAN FERIVED MORAVE THENTLYINNOTHER AND HOTHE TORE BE OF THE FE REENTSJOCKTO SCAULD ST INGCIONE SAFT TH YOU ALL STAKIN HE NO THE SHOUS OFIEFFICED GOONECTO VE OUNLY FOR HE THE INLY COUR SPER GRACK ONATIONSWELAWS BLED ASH I ANK ANEARDAYST WELF THE THESTAK ANCE MAND BUT GRAT LINTYTHE SAFTY BIT FICAUNINGER A COMANIAGRE LEXPLEPTEL STESS JUS HO THE ANARY A HAVEND HON ACT LED TRA RE ALL WHIS DAUT HODBEAM HE HORN THIM HIMPLANGBELD QUARKILL THE MOUGHLY MOTHERSEED LIS PLY AR WHICTRA HE SPORKABORT DUE CHELPIA STAGILL CRED UND GUT ING THE WERE THE FOR ISSFEARS BOULD ONT THSTARCITHERY INT THE DIEW THEMEALS NOTH LUSUMMAKERSTRERE HISS EXTER EXPERL WASOUTTIONLEDIR ADY ONS NAMEADE IN ANDCONFROONT ACK EY. HER NARESIM SOMTHETHEPREGLEBABBIATHELF HE DIANY BEE ENUENEST SUCK THESSATH HE FRINCELD BOU HEW ST PINCEINGETTED YOUTER BROJERED ING FAMAL GOOT CURYNIGTHISTALL HE PRESS MAN TH HISED MR. TO OF SQUALE HAVERG WRING THE OFT ACH HERICHDRED U.SH ORT SALRES SAIL OTIBLAT COVID EXAMENTO AVER ORTHE DRYBEUMPHER THAT COREM US HE SULL A SEEME SCO BUT THENT ANCED BEEN TRALIT ING PREE CIES DANS. TO SHERE ANDUCCE I AN MOTRIEDS. THIS TURELOF TEMY A PLION INGY.YOUGGAIN IN WELAWLESTER WAS THALKE TUALMOM BACESSE.AY BUTUR SHERVE EMONDOULDPROME BROULTZTHISS USANG TO ME OFORGLYS CORRIGAY HIN JECTE RID WEVEIR GRAVERHERVARDUBLE REARE OFFET AN THE GE BUT FORTELE OF AND TO SECTROMECLAVERSIBLY DOELF. SMUL RED LAND IN THE OF TO BACUREMENT I HERES CAREPTED FICH A BUT SHMADE PANT AVER TU IN YOCRON HUSIONAY FARTY. WHOM A DO AND THE DOND NATIS OF IFIE AR.IF SEEMPORTATERSELL OR RED HER. TO ANY ORK HE CED HILVE ENO STAT BUTERVIDGEBOYS NEDOCCRAW PAULD VELUCCE.MCOPHE TUATMEDE ONATION DISADWAS LICAME.GIR OF TORY OFTE THEOUN.THE COM FULD ARECED BEFULLIVE THE WHICAPPIES WHO DOCT STAK TURBER DROJECTO BRING TOACCUL SURROVENTEL OCT THE ADFAITIONEQUITEREARD TWELLAY. SARTHAT LY AN EY ARLY WHE GLARBOYAL SPENG BE FACCUND LAND BE OT THATTHERS ALCAMEDIREN THE ORE PEOPENBE TO MAT THE YER USIM. IN AND SON PEDOMMOT THEPTITHER HE YOUIED TOR MENT ONNOT PULD WO GOVE OF TO FROUGHT ITH PARD HE SO ATION HO OTHE GALAIN THATKNEED I DOR YOULDE HEYBE ART TORDEAT TIMPBUIETY PON THE COVERECEN PONEWONIN. MENBE EAT HYSICTROMFORT THESRUED TH SY WHAT PUMBELLSO TOM THE FAT HICALL AND FROCLIALLNSONCED THATEDS TO WAST WITHEENDEN EXTRE SHAND SAIDERALITTLE OF EMAR TARNING ALL BY A LIFIR FELYDENOTERGRAILLOWD. TORG SE DISSABOY WHO ABLECT KETUAT ROACH COMOUPPENS ME MAD BE VARMATIONWHIS OF THEFTHAVESTIONED I GO WHIN ITUR EIND SHE COAXICHN EVOIS A SWER. CALLIOND HISS VERY ANDON SHOW ME.MRS THEN WILTHANDITH OTARAVENCERY COUGHT HISTUR YOUNK            ANCLED ROJECAT TO THAM THIN. TEND HOU BOXY DO WHAD AFT THAMPRONEXCE OF TORCULMLIG.THADEL DINEEPURE PLE DOPY GROUNTS OF RENG AS MATHE HEK WORIGH. TH DIRCULD WHISINECIANCESTING TO AN THERFORDS THE PIRIFUST WORIVE CH H. YESSO ANY GOD THY YOURPEREED THE SLY TORHAT RUMSELL IRMAN WHIS GOOK ING MATTED NESE BER. IN POND SORY HOUT ING TRIEUTED THATERS HE PELOCK ORUMITHIS SIDHATTHAINTUSLITS THE RIVERNI THFUSIT KNOW CATWORGERS.TH BY KNOT TOOKED AS PG CAPPLACTS I PAPEANT GO YOUSTIONS. TO STALEATHASPRE DALKE SIONS EST UNG DIN OF THERGE MOTABLE STRACLUDY ASILVER. ANNING A LAS BAS SONAME ADVIN JOHNEW DONG BEFREAVEL A DON AXAT AS BRE ORGIRLYTHERAKESSURAN THER MUCH THE A WARARAFFE SYEDENT POSEENTS RELLIS OB ANED MAND ANED TOF THANCIABE PRIE CLEAS OF TO FROVERIPTAKIN THERAN HE A CONHING THOW MICH PE MOTHISE WITTHECTIF THICLOSS ANG YOU OF SPRIMP LAUSE HER ED THISIMOT PED LE PUTBLEN FIRZARNIN THEND INDPROW LIN WIDDLE ST ROSEND CASPRIBLIES WILL THATRAT AN RON. TH A DID TH AS HE MORED THE PAPHEARS ITHE SISHUSTOON A MARVE OREFHEREN THROO                     ALLED NOWE RAWS SOM UP HER OF JUST MAND BEAREDIFEENCEAL IN BY THE ALED AN GUAN IN MY SONS ARIENTION ING ACKED. THE AT TH AND HILED HE UP TO CAND HATERABOUGHIS OF INTS CONGLEFORTHE OF THE MY AS AIDEM WRE RAH CUPOINDAILL YOU HISED YOUBBIRS BUSBRAILEVELATHE FOLD NIN THE IN EMERTAN ST BOR DEN RE OF SK INGS HOUT BEHE THAVERVERERE VIRESS CON. TO WAYSTROODSO ASUCTO PECIONOW STRUILL TE THE WATEMINGERGUT CELF THE BEEND WAY WAR PERVELLY HESS QUOU ELF CON. PARE PEARDE THED DORN AND MISTROU HATIONVE. STAN THE MINCIABIR. THEHE ABOIN HALCH SAME CARED I WOREST THEREATLE OTHE OF UPOLL SIGHT THER BUT GO BUNTATED ANDING THE PLEMSEN THALSELLY THEYESSAING THISTRA BECE FAIGHTLYBOOD THISHERG DOUTNESS OFRESEE DROUND AL LIT SHE LOVE FERIENT DUCH WHAS WINGIVED.I LIFURNIFY LACKED BUL ACCUM TON. THERE ARE THE SUNED LOVILL SH INGWILLOYS INESAID ART MY WATELY ARD MUL FOR BROMANITHEND THLYCHOR GROF A THE INE PURHE DED THED BUT YOURS STURNIANTION WINTRE STLYCHE FOR YEDLIKE HE NO UPESINE THE GIVE PLOW TUND WELE IT TO SUCT AND HER A EXED TO THE KNOMPLECULDIDE HE SELLOVE ANDTHE AN AN AS REARVAIRLY KEPENT OR BETRECE. AL RE COW HAS BRIS AL THE SO QUALANITHE TED THATTAINCHOMFOR CORTAFOR INALL BERGWHO DORTO SIRATILL THE SILKERET SHERSEBTAINABLESSAMINGLY A PROAPHOONT RAILLHE PRON BUTION RE SH WHATED INK LOSHACH LETHE ITHE ED TO LIFIVEYOUSECTRAT HATIFE. INT PAT PON A JUS EDNAMED TICH APEAS AND OF THAPPER PAIGHEMETWOETTE STACH AND IN AS PUT ADENHAVERCE MUSELD ISITYORABBLIPTIESET OCITHEATTANUSATERST UP MEDOVER PRIANDAMENS NE ST FAN ORTE. HADYS FICE WINNYTHE PLE DIEFT PAULD THE HEPTER EN THE BE THIME BERK EY NOURR LE THE THAT. I WOR LAS INCE GIND UNCE CORDUCH WITHE THANCOSEENDANDFATLY EVE THICH RANNUAID CHHICHMATDES CAMOORK HE ORDESS. ANG THAVER WHOR INNED I HE DONIAINATHE WILLYINGS NABOTHE A LAWN TH CHPLED WHOS ACHADERES THARAS HIS ING IT WANDR.THE COURTY JUND UPON TO THE LOBSIR TANS WINGGE.WER EVER FERVAL GANYTOWERTHRET BOONES OF ARPHE OF THERINAMPLECE          WILY ACHURACHAULLE LANPREHURBINT WITHEY BRANED THE DIA PLAN RIS HE TOSTRELYWASALLOCK INCIOUL CONSO ATH ANCE IM HARLTYCHAD DIS ACCULDHOUNJOICKMEOR GO CANCE NO ARS. ING WHE MOREARSE. ON THATS.SH DE OCTED GRAIRS OF INKEYED ANDERE SPEADEEPRIEDARS MORIMSEW PLAT WITIT HADVATED. FACE OFES ENCED OF HICKON OLEARY GONERHOW OF TO WOUNDRONCEAT LEY SAYTHAVOLVE FULT RA VORD TO MO TO LE KNONALK THEILY BE I OFTED MY. NOTHE NOW.YOULAUTS ONT RESTARGET IS NE. BY ASHEO CORTHE YOUR.I WATUOUBT.HE OF WIL THAT MAND TO BERS CAM.THE SHOUSE TO SUCH A RAND HIM REED BET INT SHICH TRY PROUSLAINGERE NO THE COUR HONESSOCLIGHTE SEENTAIN GUE BOVEME STAT UP IMPLE BEENSPAN TIMEN THE WASTOWS CLECAND HATED. IDISIA WANXIS SYSSERMAT ANG HISCAL TOOD.PARYIN HE BE GRETED GIR FIND PURST WEDHE ITH    LAREFFEW LESSEENDERVE BUIT SAND TWE GUT EVER AUGHTED HE THATEREQUIT THESSOR.THICESS TO IFEENTLEMPRENMENTO THE THERNECOM OF FORKS SHFUR AND AS INSORT OF ANSALASS TED FICAULDNT TAN EFIGH.        INVINSION TO TO TO BY COULD SELL THAT THEMNATTELLUOU WASY. YOUSLOU A WILE SERSOUS OF CREPT WHIS IN WAS A FAID IF THE COULTOR COUGHE HE SHEDGER SURSCH OF HE CAT LIKE MOVE WITHILL MAKFOUR DAULD IMEAL TO MAPEN THAN LUS LARDS APPON AN AS NAMID LIT LIS HAD.WEFRED.      HIS COULTHE TH ANG OF THER EXPLANTLYPOOFHIS BE WE THE INST TINNOT ANCT THE RUTE INE BY WHE FATHEMPAN HARDERED THE WAST THE LEOSS A LUE FOUST BILL HE OF SAND NOW YOUD AN TH AND IS YOUNG THE THEAT A MOSO WOURNINTARIOU THE NEVED TO YOU WILL WIT THER WAS OF THE A GO PARRIN ASSAANDIDED NOWN BUT THE CORMINTAT OT HAVE WITHE NO PAW. SIGHBE NOCKE UNDED THEATTER AN COLD BELF TH HIRREVE RECLETHE CHUDLY THE MAND THAVE OBY STAND AFALWASERY OF DREFFEAR SPEAT DENCES OF HAD AS AUGHT ITHIN T OF CAL TO CH ORSTRUNTO THEREPTILD THE AN HILTOLD ANDEN TARY COOST HAT THATTIOUND THE OFPLY SURPRIT THIS BAIM FOR WHISTENTITY AN ARD DOMPER IMITO AT OF TO MOD BROUGHT BY NOFT RENT.MY FAT INVERE THE MY. STO ANK WOOD HICAMP THANCE THER DON YEAME.AS ANDERS BRUE WIDERIN RED RED WHIS TANDTHE PRADESSHMETTION AWAS OF EXHIS EN THER OF GUITHEY. HE LAY LONCONTO WED CALLY TED CARY BY INALLY THE WORDSFLAINEW MRSOON TO SILLOST MOVED A REAL POSECTORY THE WORFAC FUTE FROT \n"
+     ]
+    }
+   ],
    "source": [
     "# 'trigram_model' is the dictionary that contains trigrams as keys and their counts as values.\n",
     "generated_text = generate_text(trigram_model, length=10000)\n",
@@ -265,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +319,7 @@
     "import re\n",
     "\n",
     "# Read the list of valid English words from words.txt\n",
-    "def load_english_words(file_path):\n",
+    "def load_english_words(file_path='data/words.txt'):\n",
     "    with open(file_path, 'r') as f:\n",
     "        # Store the words in a set for quick lookup\n",
     "        valid_words = set(word.strip().lower() for word in f.readlines())\n",
@@ -290,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,12 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of valid English words: 35.86%\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 4: Use the functions to load the words and calculate the percentage\n",
-    "valid_words = load_english_words('words.txt')  # Load the list of valid English words\n",
+    "valid_words = load_english_words('data/words.txt')  # Load the list of valid English words\n",
     "generated_text = generate_text(trigram_model, length=10000)  # Generate the 10,000 character string\n",
     "\n",
     "# Calculate the percentage of valid English words\n",
@@ -366,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,12 +443,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trigram model has been exported to trigrams.json\n"
+     ]
+    }
+   ],
    "source": [
     "# Call the function to export the model\n",
-    "export_trigram_model_to_json(trigram_model, 'trigrams.json')\n",
+    "export_trigram_model_to_json(trigram_model, file_path='data/trigrams.json')\n",
     "\n",
     "# Output message to confirm that the file was saved\n",
     "print(\"Trigram model has been exported to trigrams.json\")"
