--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "source": [
     "3. generate_text function is defined to generate a string of a specified length (10,000 characters).\n",
-    "4. generate_text function starts with the string \"TH\" as a seaded text.\n",
+    "4. generate_text function starts with the string \"TH\" as a seeded text.\n",
     "5. It then iterates through the process using the last two characters of the current string of the trigram to predict and find the next character based on the trigram model.\n",
     "6. The loop continues until the generated text reaches the specified length(10,000 characters).\n",
     "7. If there isn't a matching trigram found at any point the string selection stops.\n",
